# ilpost-api-wrapper

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  ilpost-search-api.md  main.py  publish.ps1  pyproject.toml  setup.py
.claude/: settings.json
ilpost/: __init__.py  cli.py  client.py  models.py  scraper.py
