[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ilpost-api-wrapper"
version = "0.1.0"
description = "Python wrapper for Il Post newspaper API"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Antonio Girasella" },
]
keywords = ["ilpost", "api", "news", "italy", "search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/girasella/ilpost-api-wrapper"
Repository = "https://github.com/girasella/ilpost-api-wrapper"
Issues = "https://github.com/girasella/ilpost-api-wrapper/issues"

[tool.setuptools.packages.find]
where = ["."]
